--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                         <p style="text-align:center;"><img src="img/Praestantia-logo.png" alt="logo" class="logo"></p>
                     </div>
                     <div class="col-sm-4">
-                        <center><br> DEPARTMENT OF ELECTRONICS AND COMMUNICATION ENGINEERING
+                        <center class=dept-head><br> DEPARTMENT OF ELECTRONICS AND COMMUNICATION ENGINEERING
                         </center>
                     </div>
                     <div class="col-sm-4 wow fadeInRight">
-                        <p style="text-align:center;"><img src="img/sairam-logo.png" alt=""></p>
+                        <p style="text-align:center;"><img src="img/sairam-logo.png" alt="" class="sairam-logo"></p>
                     </div>
                 </div><br>
                 <center> <br>Presents</center>
@@ -74,28 +74,27 @@
             <div class="row info" id="info">
                 <div class="col-sm-3">
                     <center>
-                        <h2>
-                            <a href="http://www.praestantia.in" target="_blank"><img src="http://www.reliablecounter.com/count.php?page=https://smazee-development-labs.github.io/modal/&digit=style/plain/3/&reloads=0" alt="" title="" border="0"></a><br />
-                            <a href="http://" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #330010; text-decoration: none;"></a>
+                        <h2 class="info"><img src="http://www.reliablecounter.com/count.php?page=https://smazee-development-labs.github.io/modal/&digit=style/plain/3/&reloads=0" alt="" title="" border="0"><br />
+                            <a href="http://" target="_blank" style="font-family: Geneva, Arial; font-size: 9px; color: #fff; text-decoration: none;"></a>
                         </h2>
                         <h2>VIEWS</h2>
                     </center>
                 </div>
                 <div class="col-sm-3">
-                    <center>
+                    <center class="info">
                         <h2 id="reg">0</h2>
                         <h2>REGISTERED</h2>
                     </center>
                 </div>
                 <div class="col-sm-3">
-                    <center>
+                    <center class="info">
                         <h2 id="paper">0</h2>
                         <h2>PAPERS SUBMITTED</h2>
                     </center>
                 </div>
                 <div class="col-sm-3">
                     <a href="https://play.google.com/store/apps/details?id=com.nagajothy.smazee.praestantia">
-                        <center> <img src="img/Praestantia-logo.png" style="height:50px;,width:50px;">
+                        <center class="info"> <img src="img/Praestantia-logo.png" style="height:50px;,width:50px;">
                             <h2>APP DOWNLOADS</h2>
                         </center>
                     </a>
@@ -106,7 +105,7 @@
     <h1 class="events">EVENTS</h1>
     <section class="sec-ppt">
         <div class="overlay-bg">
-            <div class="container relative ppt" style="padding:0px 80px;"><br><br>
+            <div class="container relative ppt"><br><br>
                 <h1> Paper Presentation</h1>
                 <h2>Last date to submit the papers: <b style="color:red;">15/8/2017</b></h2>
                 <p><b>The following rules should be followed while submitting your paper:</b><br> 1. It is madatory that, your paper should be in the IEEE format. <br> 2. A paper can be submitted , representing a maximum of two members. <br>3. The paper must be submitted only to the above mentioned mail Id.
@@ -117,48 +116,52 @@
                 <p></p>
             </div>
         </div>
-    </section><br>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 card roborace wow slideInLeft">
-                <center>
-                    <h2>ROBORACE</h2>
-                    <h3>"FOR RACERZZ"</h3>
-                    <h5>This is an event where ur bot will be tested into a track with lot of obstacles.</h5>
-                    <p><b>Rules:</b><br> 1. The size of the bot should not be more than 30 x 30 x 30. <br> 2. Maximum of 3 participants are allowed. <br> 3. The bot may be wired or wireless. <br>4. The power supply will be provided by the college. <br>5. The bot is allowed to race for 2 times and the best of 2 will be taken into account. <br>6. If the bot falls from the track for more than 3 times, the bot will be disqualified. <br> 7. Every time a bot falls from the track, 3 seconds will be reduced. <br> 8. The bot that completes the race in minimum time is declared the winner. <br> 9. The decision by the panel is final.</p>
-                </center>
-            </div>
-            <div class="col-sm-6 card jam wow slideInRight" style="left:10px;">
-                <center>
-                    <h2>JAM TO WIN IT</h2>
-                    <h4>"It's time to tickle ur brain with circuits n electricity <br> Just charge ur brains Because JAM to win it <br>Is going to be crazy this time" (It's a Group event)</h4>
-                    <p style="text-align:left;"><b>Round 1:</b>The jumbled words are given to the contestants..in which contestants can form groups(max 3 min 2 in a group)..each active must try to find or crack the jumbled /mind tricky games in A MINUTE <br><b>Round 2:</b>The active minds are moved to the next round..in which 2 words are given to a group..within a given period of time to prepare he /she must link the 2 words n try to innovate something out of it..Which should be practically acceptable..each group members are given 5 MINUTES TO PREPARE. <br> <b>Round 3:</b>Electrocuted minds which are qualified for this round may relax n take a dumbsharad round based on the circuit selected by a member of the group and enact their circuit they got or try to find the technical word take by the team member</p>
-                </center>
-            </div>
-        </div><br>
-        <div class="row">
-            <div class="col-sm-6 card quiz wow slideInLeft" style="left:-10px;">
-                <center>
-                    <h2>TECHNICAL QUIZ</h2>
-                    <h3>“The empire of future are the empires of mind”</h3>
-                    <p>Rules and Regulations: Technical Quiz (Team @ Two participants) <br> Topic: Questions from Domain of Electronic and communication <br>
-                    </p>
-                    <p style="text-align:left;"><b>Rules: </b><br> <b>Round – I:</b> A written quiz will be conducted in teams (two members per team) and the best 20 teams out of it will progress to next round. The maximum time provided for all the participants is 20 minutes <br><b>Round – II:</b> An oral quiz comprising of 3 rounds that promises to test not only your intelligence, but also the ability to stay calm under pressure. And the best 7 team out of it will progress to next round. <br><b> Round- III:</b> An buzzer round which deals with the dept of our domain and test the presence of knowledge. <br>
-                    </p>
-                </center>
-            </div>
-            <div class="col-sm-6 card conn wow slideInRight" style="left:10px;">
-                <center>
-                    <h2>CONNECTIONS</h2>
-                    <h3>"An enthralling event to connect your neurons to complete your brain circuit!"</h3><br>
-                    <p>Get ready to trigger your technical knowledge by connecting your way through three rounds by using the clues in the pictures.</p>
-                </center><br>
-                <p><b>Rules:</b><br>1.Only two members are welcomed for a team. <br>2. College ID card is mandatory for registiration <br>3. Unfair game leads to disquallification of the team.</p><br><br>
+    </section>
+    <section class="sec-tex-bg"><br>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 card roborace wow slideInLeft">
+                    <center>
+                        <h2>ROBORACE</h2>
+                        <h3>"FOR RACERZZ"</h3>
+                        <h5>This is an event where ur bot will be tested into a track with lot of obstacles.</h5>
+                        <p><b>Rules:</b><br> 1. The size of the bot should not be more than 30 x 30 x 30. <br> 2. Maximum of 3 participants are allowed. <br> 3. The bot may be wired or wireless. <br>4. The power supply will be provided by the college. <br>5. The bot is allowed to race for 2 times and the best of 2 will be taken into account. <br>6. If the bot falls from the track for more than 3 times, the bot will be disqualified. <br> 7. Every time a bot falls from the track, 3 seconds will be reduced. <br> 8. The bot that completes the race in minimum time is declared the winner. <br> 9. The decision by the panel is final.</p>
+                    </center>
+                </div>
+                <div class="col-sm-6 card jam wow slideInRight" style="left:10px;">
+                    <center>
+                        <h2>JAM TO WIN IT</h2>
+                        <h4>"It's time to tickle ur brain with circuits n electricity <br> Just charge ur brains Because JAM to win it <br>Is going to be crazy this time" (It's a Group event)</h4>
+                        <p style="text-align:left;"><b>Round 1:</b>The jumbled words are given to the contestants..in which contestants can form groups(max 3 min 2 in a group)..each active must try to find or crack the jumbled /mind tricky games in A MINUTE <br><b>Round 2:</b>The active minds are moved to the next round..in which 2 words are given to a group..within a given period of time to prepare he /she must link the 2 words n try to innovate something out of it..Which should be practically acceptable..each group members are given 5 MINUTES TO PREPARE. <br> <b>Round 3:</b>Electrocuted minds which are qualified for this round may relax n take a dumbsharad round based on the circuit selected by a member of the group and enact their circuit they got or try to find the technical word take by the team member</p>
+                    </center>
+                </div>
+            </div><br>
+            <div class="row">
+                <div class="col-sm-6 card quiz wow slideInLeft">
+                    <center>
+                        <h2>TECHNICAL QUIZ</h2>
+                        <h3>“The empire of future are the empires of mind”</h3>
+                        <p>Rules and Regulations: Technical Quiz (Team @ Two participants) <br> Topic: Questions from Domain of Electronic and communication <br>
+                        </p>
+                        <p style="text-align:left;"><b>Rules: </b><br> <b>Round – I:</b> A written quiz will be conducted in teams (two members per team) and the best 20 teams out of it will progress to next round. The maximum time provided for all the participants is 20 minutes <br><b>Round – II:</b> An oral quiz comprising of 3 rounds that promises to test not only your intelligence, but also the ability to stay calm under pressure. And the best 7 team out of it will progress to next round. <br><b> Round- III:</b> An buzzer round which deals with the dept of our domain and test the presence of knowledge. <br>
+                        </p>
+                    </center>
+                </div>
+                <div class="col-sm-6 card conn wow slideInRight" style="left:10px;">
+                    <center>
+                        <h2>CONNECTIONS</h2>
+                        <h3>"An enthralling event to connect your neurons to complete your brain circuit!"</h3><br>
+                        <p>Get ready to trigger your technical knowledge by connecting your way through three rounds by using the clues in the pictures.</p>
+                    </center><br>
+                    <p><b>Rules:</b><br>1.Only two members are welcomed for a team. <br>2. College ID card is mandatory for registiration <br>3. Unfair game leads to disquallification of the team.</p><br><br>
 
+                </div>
             </div>
         </div>
-    </div>
-    <hr>
+        <br>
+        <br>
+    </section>
+
     <!-- section begin -->
     <section class="bg-img content">
         <div class="container register">
@@ -276,7 +279,7 @@
         </div>
     </section>
     <section class="con">
-        <div>
+        <div><br>
             <h2 class="text-center "><img src="https://png.icons8.com/id-card/color/48" title="ID Card" width="48" height="48"><b>  CONTACT</b></h2><br>
             <div class="row">
                 <div class="col-sm-4">
