--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				></use>
 			</svg></p>
             <center>
-                <h4 style="color:white;">FEEL THE TECH!!!</h4>
+                <h4 style="color:white;">THE TOUCH OF NEW WORLD!!!</h4>
             </center><br>
             <h2 id="counter">ON AUGUST 30,2017</h2>
             <div class="row info" id="info">
@@ -107,7 +107,8 @@
         <div class="overlay-bg">
             <div class="container relative ppt"><br><br>
                 <h1> Paper Presentation</h1>
-                <h2>Last date to submit the papers: <b style="color:red;">15/8/2017</b></h2>
+                <h2>Last date to submit the papers: <b style="color:red;">18/8/2017</b></h2>
+		<h3>Date of Intimation: 23/8/2017</h3>
                 <p><b>The following rules should be followed while submitting your paper:</b><br> 1. It is madatory that, your paper should be in the IEEE format. <br> 2. A paper can be submitted , representing a maximum of two members. <br>3. The paper must be submitted only to the above mentioned mail Id.
                 </p>
                 <p>
@@ -125,14 +126,14 @@
                         <h2>ROBORACE</h2>
                         <h3>"FOR RACERZZ"</h3>
                         <h5>This is an event where ur bot will be tested into a track with lot of obstacles.</h5>
-                        <p><b>Rules:</b><br> 1. The size of the bot should not be more than 30 x 30 x 30. <br> 2. Maximum of 3 participants are allowed. <br> 3. The bot may be wired or wireless. <br>4. The power supply will be provided by the college. <br>5. The bot is allowed to race for 2 times and the best of 2 will be taken into account. <br>6. If the bot falls from the track for more than 3 times, the bot will be disqualified. <br> 7. Every time a bot falls from the track, 3 seconds will be reduced. <br> 8. The bot that completes the race in minimum time is declared the winner. <br> 9. The decision by the panel is final.</p>
+                        <p><b>Rules:</b><br> 1. The size of the bot should not be more than 30 x 30 x 30. <br> 2. Maximum of 3 participants are allowed. <br> 3. The bot may be wired or wireless. <br>4. The bot is allowed to race for 2 times and the best of 2 will be taken into account. <br>5. If the bot falls from the track for more than 3 times, the bot will be disqualified. <br> 6. Every time a bot falls from the track, 3 seconds will be reduced. <br> 7. The bot that completes the race in minimum time is declared the winner. <br> 8. The decision by the panel is final.</p>
                     </center>
                 </div>
                 <div class="col-sm-6 card jam wow slideInRight" style="left:10px;">
                     <center>
                         <h2>JAM TO WIN IT</h2>
-                        <h4>"It's time to tickle ur brain with circuits n electricity <br> Just charge ur brains Because JAM to win it <br>Is going to be crazy this time" (It's a Group event)</h4>
-                        <p style="text-align:left;"><b>Round 1:</b>The jumbled words are given to the contestants..in which contestants can form groups(max 3 min 2 in a group)..each active must try to find or crack the jumbled /mind tricky games in A MINUTE <br><b>Round 2:</b>The active minds are moved to the next round..in which 2 words are given to a group..within a given period of time to prepare he /she must link the 2 words n try to innovate something out of it..Which should be practically acceptable..each group members are given 5 MINUTES TO PREPARE. <br> <b>Round 3:</b>Electrocuted minds which are qualified for this round may relax n take a dumbsharad round based on the circuit selected by a member of the group and enact their circuit they got or try to find the technical word take by the team member</p>
+                        <h4>"It's time to tickle your brain with circuits n electricity <br> Just charge ur brains Because JAM to win it <br>Is going to be crazy this time" (It's a Group event)</h4>
+                        <p style="text-align:left;"><b>Round 1:</b>The jumbled words are given to the contestants in which contestants can form groups(max 3 min 2 in a group) each active must try to find or crack the jumbled /mind tricky games in A MINUTE <br><b>Round 2:</b>The active minds are moved to the next round in which 2 words are given to a group within a given period of time to prepare he /she must link the 2 words and try to innovate something out of it Which should be practically acceptable each group members are given 5 MINUTES TO PREPARE. <br> <b>Round 3:</b>Electrocuted minds which are qualified for this round may relax and take a dumbsharad round based on the circuit selected by a member of the group and enact their circuit they got or try to find the technical word take by the team member</p>
                     </center>
                 </div>
             </div><br>
