--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="container relative ppt"><br><br>
                 <h1> Paper Presentation</h1>
                 <h2>Last date to submit the papers: <b style="color:red;">18/8/2017</b></h2>
-		<h3>Date of Intimation: 23/8/2017</h3>
+		    <center><h3 style="color:white">Date of Intimation: 23/8/2017</h3></center>
                 <p><b>The following rules should be followed while submitting your paper:</b><br> 1. It is madatory that, your paper should be in the IEEE format. <br> 2. A paper can be submitted , representing a maximum of two members. <br>3. The paper must be submitted only to the above mentioned mail Id.
                 </p>
                 <p>
