--- a/index.html
+++ b/index.html
@@ -165,61 +165,66 @@
     <!-- section begin -->
     <section class="bg-img content">
         <div class="container register">
-            <center>
-                <h2 class="wow pulse infinite" style="color:white;"><img src="https://png.icons8.com/edit-property/ultraviolet/40" title="Edit Property" width="40" height="40"><b> REGISTER SOON</b></h2>
-            </center>
+            <div class="row">
+                <div class="col-md-s6"></div>
+                <div class="col-md-s6">
+                    <center>
+                        <h2 class="wow pulse infinite" style="color:white;"><img src="https://png.icons8.com/edit-property/ultraviolet/40" title="Edit Property" width="40" height="40"><b> REGISTER SOON</b></h2>
+                    </center>
 
-            <span class="input input--hoshi">
+                    <span class="input input--hoshi">
 					<input class="input__field input__field--hoshi" type="text" name="Name"  id="input-4 name">
 					<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4">
 						<span class="input__label-content input__label-content--hoshi"><b style="color:white;">Name</b></span>
-            </label>
-            </span>
+                    </label>
+                    </span>
 
-            <span class="input input--hoshi">
+                    <span class="input input--hoshi">
 					<input class="input__field input__field--hoshi" type="email" name="email"  id="input-4 email">
 					<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4">
 						<span class="input__label-content input__label-content--hoshi"><b style="color:white;">Email</b></span>
-            </label>
-            </span> <span class="input input--hoshi">
+                    </label>
+                    </span> <span class="input input--hoshi">
 					<input class="input__field input__field--hoshi" type="phone" name="phone"  id="input-4 phone">
 					<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4">
 						<span class="input__label-content input__label-content--hoshi"><b style="color:white;">Phone</b></span>
-            </label>
-            </span><span class="input input--hoshi">
+                    </label>
+                    </span><span class="input input--hoshi">
 					<input class="input__field input__field--hoshi" type="text" name="college"  id="input-4 clg">
 					<label class="input__label input__label--hoshi input__label--hoshi-color-1" for="input-4">
 						<span class="input__label-content input__label-content--hoshi"><b style="color:white;">Name of College</b></span>
-            </label>
-            </span>
-            <div class="row">
-                <div class="col-md-6" style="padding-left: 5px;">
-                    <select class="form-control" type="text" name="year" id="year" placeholder="Year">
+                    </label>
+                    </span>
+                    <div class="row">
+                        <div class="col-md-6" style="padding-left: 5px;">
+                            <select class="form-control" type="text" name="year" id="year" placeholder="Year">
                                 <option>IV</option>
                                 <option>III</option>
                                  <option>II</option>
                                  <option>I</option>
                                             </select>
-                </div>
-                <div class="col-md-6" style="padding-right: 5px;">
-                    <select class="form-control" type="text" name="dept" id="dept" placeholder="Department">
+                        </div>
+                        <div class="col-md-6" style="padding-right: 5px;">
+                            <select class="form-control" type="text" name="dept" id="dept" placeholder="Department">
                                                 <option>ECE</option>
                                                 <option>CSE</option>
                                                 <option>EEE</option>
                                                 <option>IT</option>
-                                                <option>MECH</option>
                                                 <option>OTHERS</option>
                                             </select>
-                </div>
+                        </div>
 
-            </div>
-            <center>
-                <div class="row buton">
-                    <a href="#">
-                        <h5>REGISTER</h5>
-                    </a>
+                    </div>
+                    <center>
+                        <div class="row buton">
+                            <a href="#">
+                                <h5>REGISTER</h5>
+                            </a>
+                        </div>
+                    </center>
                 </div>
-            </center>
+            </div>
+
         </div>
     </section>
     <section class="bg-img1">
