--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
             <div class="container relative ppt"><br><br>
                 <h1> Paper Presentation</h1>
                 <h2>Last date to submit the papers: <b style="color:red;">18/8/2017</b></h2>
-		    <center><h3 style="color:white">Date of Intimation: 23/8/2017</h3></center>
+                <center>
+                    <h3 style="color:white">Date of Intimation: 23/8/2017</h3>
+                </center>
                 <p><b>The following rules should be followed while submitting your paper:</b><br> 1. It is madatory that, your paper should be in the IEEE format. <br> 2. A paper can be submitted , representing a maximum of two members. <br>3. The paper must be submitted only to the above mentioned mail Id.
                 </p>
                 <p>
@@ -167,8 +169,17 @@
     <section class="bg-img content">
         <div class="container register">
             <div class="row">
-                <div class="col-md-s6"></div>
-                <div class="col-md-s6">
+                <div class="col-sm-6">
+                    <h1 class="text-center">RULES AND REGULATIONS</h1>
+                    <ul>
+                        <li>
+                            The Participants should come only in formals.
+                        </li>
+                        <li>Cell phone are not allowedd inside the campus</li>
+                        <li>Participants should bring ID card of their college.</li>
+                    </ul>
+                </div>
+                <div class="col-sm-6">
                     <center>
                         <h2 class="wow pulse infinite" style="color:white;"><img src="https://png.icons8.com/edit-property/ultraviolet/40" title="Edit Property" width="40" height="40"><b> REGISTER SOON</b></h2>
                     </center>
@@ -225,7 +236,6 @@
                     </center>
                 </div>
             </div>
-
         </div>
     </section>
     <section class="bg-img1">
