--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Spectral" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Eczar" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
 </head>
 
 <body>
@@ -303,7 +304,7 @@
                 <div class="col-sm-4">
                     <h5 class="text-center"> <b>Contact us</b></h5>
                     <p><img src="https://png.icons8.com/marker/ultraviolet/20" title="Marker" width="30" height="30"> Sai Leo Nagar,West Tambaram, Chennai-44</p>
-                    <p><img src="https://png.icons8.com/iphone/office/30" title="iPhone" width="30" height="30">+91 9578154721</p>
+                    <p><img src="https://png.icons8.com/iphone/office/30" title="iPhone" width="30" height="30">+91 </p>
                     <p><img src="https://png.icons8.com/gmail/color/24" title="Gmail" width="34" height="34"> praestantia2k17@sairamit.edu.in</p>
                 </div>
                 <div class="col-sm-4 slideanim">
